infra/ingress/ingress-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service
  namespace: auth-service
  labels:
    app.kubernetes.io/created-by: group1-nus
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # HIGHLIGHT
    alb.ingress.kubernetes.io/group.name: hris-app-group
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /auth-service
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
