infra/ingress/ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: ui
  labels:
    app.kubernetes.io/created-by: group1-nus
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # Ensure that the rewrite-target annotation is set to "/" for React routing.
    alb.ingress.kubernetes.io/rewrite-target: /
    # HIGHLIGHT
    alb.ingress.kubernetes.io/group.name: hris-app-group
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 80
